--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "component-template",
+  "name": "undefinedou-inputs",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/components/Input/index.js",
   "dependencies": {
     "font-awesome": "^4.7.0",
     "react": "^16.2.0",
@@ -19,12 +20,15 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "compile": "NODE_ENV=production babel src --out-dir dist --copy-files",
+    "build-storybook": "build-storybook -s public",
+    "prepublish": "npm run compile"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.17",
     "@storybook/addon-links": "^3.2.17",
     "@storybook/react": "^3.2.17",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.3",
     "eslint": "^4.13.1",
     "eslint-config-standard": "^11.0.0-beta.0",
