--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
     "storybook": "start-storybook -p 9009 -s public",
-    "compile": "NODE_ENV=production babel src --out-dir dist --copy-files",
+    "compile": "NODE_ENV=production ./node_modules/.bin/babel src --out-dir dist --copy-files",
     "build-storybook": "build-storybook -s public",
     "prepublish": "npm run compile",
-    "preinstall": "npm run compile"
+    "postinstall": "npm run compile"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.17",
