renamed to undefined-inputs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "undefinedou-inputs",
+  "name": "undefined-inputs",
   "version": "0.1.0",
   "private": true,
   "main": "dist/components/Input/index.js",
